修改标签标题、微调样式

--- a/docs/.vuepress/styles/index.css
+++ b/docs/.vuepress/styles/index.css
@@ -6,7 +6,7 @@
     width: 15rem !important;
 }
 .theme-default-content:not(.custom){
-    max-width: 800px;
+    max-width: 930px !important;
 }
 .theme-default-content:not(.custom), .page-meta, .page-nav {
     padding-right: 3rem !important;
