新增Echarts配置说明

--- a/docs/.vuepress/styles/custom.css
+++ b/docs/.vuepress/styles/custom.css
@@ -1,1 +1,11 @@
 /* 自定义css样式 */
+
+/* echarts 深色背景*/
+.chart-dark-bg{
+  background: #061C4C;
+}
+
+/* echarts 浅色背景 */
+.chart-light-bg{
+  background: #FFFFFF;
+}
