添加js方案模块 + 调整配置文件

--- a/docs/.vuepress/styles/index.css
+++ b/docs/.vuepress/styles/index.css
@@ -16,7 +16,7 @@ body ul{
     width: 15rem !important;
 }
 .theme-default-content:not(.custom){
-    max-width: 930px !important;
+    /* max-width: 930px !important; */
 }
 .theme-default-content:not(.custom), .page-meta, .page-nav {
     padding-right: 3rem !important;
